[JENKINS-41016_Move_Input_buttons_to_left] fix wrap for description. we do not want to see overflow.

--- a/blueocean-dashboard/src/main/less/forms/index.less
+++ b/blueocean-dashboard/src/main/less/forms/index.less
@@ -16,7 +16,8 @@
             padding-bottom: 10px;
         }
 
-        .form-element {
+        .form-element,
+        .FormElement{
             padding-top: 5px;
             padding-bottom: 5px;
 
@@ -26,6 +27,7 @@
 
             * > .inputDescription {
                 padding-top: 5px;
+                white-space: pre-wrap;
             }
 
             * > .input,
